update ci and cd files